# novel_writer

./: .gitignore  .gitmodules  WORKSPACE.md  index.html  package-lock.json  start-workspace.cmd  start-workspace.ps1  workspace.env.example
backend/classifier/: __init__.py  __main__.py  calendar_sync.py  cli.py  config.py  core.py  opera_adapter.py  pyproject.toml  router.py  staging.py  taxonomy.py  types_writer.py
backend/classifier/cognitive/: __init__.py  redact.py  router.py  types.py
backend/classifier/feeds/: bible_changelog.py
backend/classifier/llm/: client.py  route_via_llm.py
backend/classifier/llm/prompts/: route_blob.md
backend/classifier/rules/: frontmatter.py  heuristics.py  leak_guard.py
backend/classifier/schemas/: __init__.py  base.py
backend/classifier/tests/: conftest.py  test_bible_changelog.py  test_calendar_sync.py  test_cli.py  test_cognitive_redact.py  test_cognitive_router.py  test_frontmatter.py  test_guard.py  test_heuristics.py  test_leak_guard.py  test_opera_adapter.py  test_router.py  test_staging.py  test_taxonomy.py  test_writers.py
backend/classifier/writers/: __init__.py  base.py  dispatch.py
backend/game_db/opera/: .gitignore  INTEGRATION.md  README.md  pyproject.toml
backend/game_db/opera/backend/: __init__.py
backend/game_db/opera/backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/game_db/opera/backend/tests/: __init__.py  test_api.py  test_bootstrap_from_novel_db.py  test_engine.py  (+3 more)
backend/game_db/opera/frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
(+667 files in other folders)
