[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opera-trpg"
version = "0.1.0"
description = "Local-first multi-agent TRPG framework with FastAPI, React, and LangGraph-ready orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.132.0,<1.0.0",
  "uvicorn>=0.41.0,<1.0.0",
  "sqlalchemy>=2.0.46,<3.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "langgraph>=0.3.0,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

